wip: add UI for saved payment methods

--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="pay_amount" description="Text displayed next to the amount to prompt the customer to pay">Pay %1$s</string>
     <string name="add_new_card_hint" description="Text displayed to prompt the customer to add a card">Add a new card</string>
     <string name="pay_with_card_hint">Pay by card</string>
+    <string name="other_ways_to_pay">Other ways to pay</string>
+    <string name="edit_saved_payment_methods">Edit saved cards</string>
+    <string name="edit">Edit</string>
+    <string name="done">Done</string>
+    <string name="delete">Delete</string>
+    <string name="add_card">Add card</string>
 
     <!-- Form things -->
     <string name="card_holder_name">Cardholder name</string>
@@ -11,7 +17,6 @@
     <string name="form_error_required">%1$s is required</string>
     <string name="form_error_invalid">%1$s is invalid</string>
 
-    <!--  Card Scanner Things: ignore this for now  -->
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Accessibility -->
+    <string name="go_back_description">go back</string>
 </resources>
