--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="delete">Delete</string>
     <string name="add_card">Add card</string>
     <string name="card_network_fallback">Card</string>
+    <string name="success_text">Success!</string>
 
     <!-- Form things -->
     <string name="card_holder_name">Cardholder name</string>
@@ -21,5 +22,6 @@
 
     <!-- Accessibility -->
     <string name="go_back_description">go back</string>
+    <string name="success_icon_description">success</string>
 
 </resources>
