--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="card_network_fallback">Card</string>
     <string name="success_text">Success!</string>
     <string name="bank_account">Bank Account</string>
+    <string name="enter_card_details">Enter your card details</string>
 
     <!-- Form things -->
     <string name="card_holder_name">Cardholder name</string>
