--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="pay_amount">Pay %1$s</string>
+    <string name="pay_amount">%1$s</string>
     <string name="add_new_payment_method">Add a payment method</string>
     <string name="pay_by_card">Pay by card</string>
     <string name="add_bank_account">Add bank account</string>
@@ -13,6 +13,7 @@
     <string name="success_text">Success!</string>
     <string name="bank_account">Bank Account</string>
     <string name="enter_card_details">Enter your card details</string>
+    <string name="last_four">•••• %d</string>
 
     <!-- Form things -->
     <string name="card_holder_name">Cardholder name</string>
