--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -60,7 +60,8 @@
 
     <string name="klarna">Klarna</string>
     <string name="choose_payment_method">Choose payment method</string>
-    <string name="saved_payment_method">Saved payment method</string>
+    <string name="saved_payment_methods">Saved payment methods</string>
+    <string name="available_payment_methods">Available payment methods</string>
     <string name="see_all">see all</string>
     <string name="mastercard">Mastercard</string>
     <string name="john_doe">John Doe</string>
