--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="bank_account">Bank Account</string>
     <string name="enter_card_details">Enter your card details</string>
     <string name="last_four">•••• %d</string>
+    <string name="expiry_date">%d / %d</string>
 
     <!-- Form things -->
     <string name="card_holder_name">Cardholder name</string>
@@ -69,4 +70,6 @@
     <string name="expires_12_21">Expires 12 / 21</string>
     <string name="payment_method_icon">payment method icon</string>
     <string name="test_mail_com">test@mail.com</string>
+    <string name="icon_showing_state">icon showing state</string>
+    <string name="check_icon">check icon</string>
 </resources>
