--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="test_mail_com">test@mail.com</string>
     <string name="icon_showing_state">icon showing state</string>
     <string name="check_icon">check icon</string>
+    <string name="payment_method_deletion_message">Are you sure you want to delete this payment method?</string>
 </resources>
