--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="pay">Pay</string>
+    <string name="pay_specific_amount">Pay %s</string>
     <string name="pay_amount">%1$s</string>
     <string name="add_new_payment_method">Add a payment method</string>
     <string name="pay_by_card">Pay by card</string>
