--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="see_all">see all</string>
     <string name="mastercard">Mastercard</string>
     <string name="john_doe">John Doe</string>
-    <string name="_1234">•••• 1234</string>
+    <string name="last_four_with_dots">•••• 1234</string>
     <string name="expires_12_21">Expires 12 / 21</string>
     <string name="payment_method_icon">payment method icon</string>
     <string name="test_mail_com">test@mail.com</string>
