--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="choose_payment_method">Choose payment method</string>
     <string name="saved_payment_methods">Saved payment methods</string>
     <string name="available_payment_methods">Available payment methods</string>
-    <string name="see_all">see all</string>
+    <string name="manage">Manage</string>
     <string name="mastercard">Mastercard</string>
     <string name="john_doe">John Doe</string>
     <string name="_1234">•••• 1234</string>
