--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="klarna">Klarna</string>
     <string name="choose_payment_method">Choose payment method</string>
     <string name="saved_payment_methods">Saved payment methods</string>
-    <string name="available_payment_methods">Available payment methods</string>
+    <string name="other_ways_of_paying">Other ways of paying</string>
     <string name="manage">Manage</string>
     <string name="mastercard">Mastercard</string>
     <string name="john_doe">John Doe</string>
