--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_payment_method">Add payment method</string>
     <string name="show_checkout">Show Checkout</string>
+    <string name="add_klarna">Add Klarna</string>
 </resources>
