--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="add_payment_method">Add payment method</string>
     <string name="show_checkout">Show Checkout</string>
     <string name="add_klarna">Add Klarna</string>
-    <string name="add_customer_id">add customer ID</string>
+    <string name="add_apaya">Pay by mobile</string>
+    <string name="add_customer_id">Add customer ID</string>
     <string name="customer_id">Customer ID</string>
     <string name="country">Country</string>
     <string name="amount">Amount</string>
