--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -77,6 +77,8 @@
     <string name="dotpay">Dotpay</string>
     <string name="vipps">Vipps</string>
     <string name="mobilepay">Mobilepay</string>
+    <string name="bancontact">Bancontact</string>
+    <string name="payconiq">Payconiq</string>
 
     <string name="choose_payment_method">Choose payment method</string>
     <string name="saved_payment_methods">SAVED PAYMENT METHOD</string>
@@ -102,5 +104,4 @@
     </string>
     <string name="error_default">Error!</string>
     <string name="payment_request_unsuccessful">Your payment was unsuccessful.</string>
-
 </resources>
