--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="mobilepay">Mobilepay</string>
     <string name="bancontact">Bancontact</string>
     <string name="payconiq">Payconiq</string>
+    <string name="eps">Eps</string>
 
     <string name="choose_payment_method">Choose payment method</string>
     <string name="saved_payment_methods">SAVED PAYMENT METHOD</string>
