--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="bank_account">Bank Account</string>
     <string name="enter_card_details">Enter card details</string>
     <string name="last_four">•••• %d</string>
-    <string name="expiry_date">%1$d / %2$d</string>
+    <string name="expiry_date">%1$s / %2$s</string>
     <string name="available_payment_methods">Available payment methods</string>
 
     <!-- Form things -->
@@ -105,4 +105,6 @@
     </string>
     <string name="error_default">Error!</string>
     <string name="payment_request_unsuccessful">Your payment was unsuccessful.</string>
+    <string name="no_additional_fee">No additional fee</string>
+    <string name="additional_fees_may_apply">Additional fees may apply</string>
 </resources>
