--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
+    <string name="loading">Loading...</string>
+    <string name="tokenize">Tokenize</string>
+
+    <string name="components">Components</string>
+
     <string name="previous">Previous</string>
     <string name="test_deprecated_checkout">Test Deprecated Checkout</string>
 
