--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="enter_email">Enter your email</string>
     <string name="enter_address">Enter your address</string>
     <string name="first_last_name">First and last name</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
 
     <string name="bank_selection_title">Choose your bank</string>
     <string name="bank_selection_hint">Search banks</string>
@@ -132,4 +134,6 @@
     <string name="label_authorized">Authorized</string>
     <string name="label_declined">Declined</string>
     <string name="label_failed">Failed</string>
+    <string name="country_search_hint">Find country</string>
+    <string name="title_card_form_billing_address">Billing address</string>
 </resources>
