--- a/primer-sdk-android/src/main/res/values-de/strings.xml
+++ b/primer-sdk-android/src/main/res/values-de/strings.xml
@@ -102,4 +102,5 @@
   <string name="payment_method_xfers_description">Lade den Screenshot in deiner Banking-App hoch.</string>
   <string name="no_additional_fee">Keine zusätzlichen Gebühren</string>
   <string name="additional_fees_may_apply">Es können weitere Gebühren anfallen</string>
+  <string name="paytrail">paytrail</string>
 </resources>
