--- a/primer-sdk-android/src/main/res/values-it/strings.xml
+++ b/primer-sdk-android/src/main/res/values-it/strings.xml
@@ -102,4 +102,5 @@
   <string name="payment_method_xfers_description">Carica lo screenshot nella tua app bancaria.</string>
   <string name="no_additional_fee">Nessun costo aggiuntivo</string>
   <string name="additional_fees_may_apply">Potrebbero essere applicati costi aggiuntivi</string>
+    <string name="paytrail">paytrail</string>
 </resources>
