--- a/primer-sdk-android/src/main/res/values-nb/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nb/strings.xml
@@ -102,4 +102,5 @@
   <string name="payment_method_xfers_description">Last opp skjermbildet i bankappen din.</string>
   <string name="no_additional_fee">Ingen ytterligere avgifter</string>
   <string name="additional_fees_may_apply">Ytterligere avgifter kan påløpe</string>
+    <string name="paytrail">paytrail</string>
 </resources>
