--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -102,4 +102,5 @@
   <string name="payment_method_xfers_description">Upload de schermafbeelding in uw bank-app</string>
   <string name="no_additional_fee">Geen extra kosten</string>
   <string name="additional_fees_may_apply">Er kunnen extra kosten van toepassing zijn</string>
+    <string name="paytrail">paytrail</string>
 </resources>
