--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <!--surcharge-->
     <string name="no_additional_fee">No additional fee</string>
     <string name="additional_fees_may_apply">Additional fees may apply</string>
+    <string name="paytrail">paytrail</string>
 </resources>
