--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -73,6 +73,8 @@
     <string name="atome">Atome</string>
     <string name="xfers">Paynow</string>
     <string name="interac">Interac</string>
+    <string name="paytrail">Paytrail</string>
+    <string name="payshop">Payshop</string>
     <string name="choose_payment_method">Kies betaalmethode</string>
     <string name="saved_payment_methods">OPGESLAGEN BETAALMETHODE</string>
     <string name="other_ways_of_paying">Andere manieren om te betalen</string>
@@ -103,5 +105,4 @@
     <string name="payment_method_xfers_description">Upload de schermafbeelding in uw bank-app</string>
     <string name="no_additional_fee">Geen extra kosten</string>
     <string name="additional_fees_may_apply">Er kunnen extra kosten van toepassing zijn</string>
-    <string name="paytrail">paytrail</string>
 </resources>
