--- a/primer-sdk-android/src/main/res/values-el/strings.xml
+++ b/primer-sdk-android/src/main/res/values-el/strings.xml
@@ -73,6 +73,8 @@
     <string name="atome">Atome</string>
     <string name="xfers">Paynow</string>
     <string name="interac">Interac</string>
+    <string name="paytrail">Paytrail</string>
+    <string name="payshop">Payshop</string>
     <string name="choose_payment_method">Επιλογή τρόπου πληρωμής</string>
     <string name="saved_payment_methods">ΑΠΟΘΗΚΕΥΤΗΚΕ ΤΡΟΠΟΣ ΠΛΗΡΩΜΗΣ</string>
     <string name="other_ways_of_paying">Άλλοι τρόποι πληρωμής</string>
@@ -103,5 +105,4 @@
     <string name="payment_method_xfers_description">Ανεβάστε το στιγμιότυπο οθόνης στην τραπεζική σας εφαρμογή.</string>
     <string name="no_additional_fee">Χωρίς πρόσθετη χρέωση</string>
     <string name="additional_fees_may_apply">Ενδέχεται να ισχύουν πρόσθετες χρεώσεις</string>
-    <string name="paytrail">paytrail</string>
 </resources>
