--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -73,6 +73,8 @@
     <string name="atome">Atome</string>
     <string name="xfers">Paynow</string>
     <string name="interac">Interac</string>
+    <string name="paytrail">Paytrail</string>
+    <string name="payshop">Payshop</string>
     <string name="choose_payment_method">Elegir método de pago</string>
     <string name="saved_payment_methods">MÉTODO DE PAGO GUARDADO</string>
     <string name="other_ways_of_paying">Otras formas de pagar</string>
@@ -103,5 +105,4 @@
     <string name="payment_method_xfers_description">Sube la captura de pantalla a la aplicación de tu banco.</string>
     <string name="no_additional_fee">Sin cargos adicionales</string>
     <string name="additional_fees_may_apply">Podrían aplicarse cargos adicionales</string>
-    <string name="paytrail">paytrail</string>
 </resources>
