--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -73,6 +73,8 @@
     <string name="atome">Atome</string>
     <string name="xfers">Paynow</string>
     <string name="interac">Interac</string>
+    <string name="paytrail">Paytrail</string>
+    <string name="payshop">Payshop</string>
     <string name="choose_payment_method">Escolha o método de pagamento</string>
     <string name="saved_payment_methods">MÉTODO DE PAGAMENTO GUARDADO</string>
     <string name="other_ways_of_paying">Outras formas de pagar</string>
@@ -103,5 +105,4 @@
     <string name="payment_method_xfers_description">Carregue a captura de ecrã na sua aplicação bancária.</string>
     <string name="no_additional_fee">Sem taxas adicionais</string>
     <string name="additional_fees_may_apply">Podem ser aplicadas taxas adicionais</string>
-    <string name="paytrail">paytrail</string>
 </resources>
